corrigiendo error en vista principal de base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -303,6 +303,7 @@
                 PUERTO COSECHA
             </div>
             <nav class="navbar-nav">
+                <a href="{% url 'home' %}">Inicio</a>
                 <a href="{% url 'lista_productos' %}">Productos</a>
                 <a href="{% url 'lista_incoterms' %}">Incoterms</a>
                 <a href="{% url 'lista_normativa' %}">Normativa</a>
